add model inference
